# HollowPS

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/Application/: config.json  serverlist.json
assets/TemplateCollections/: AvatarConfigTemplateCollection.json  AvatarConfigTemplateCollection.tsv  MainCityObjectTemplateCollection.tsv  NPCTransformTemplateCollection.tsv  UnlockConfigTemplateCollection.json  UnlockConfigTemplateCollection.tsv
common/: Cargo.toml
common/src/: util.rs
gameserver/: .env  Cargo.toml  EventGraphCollection.json  gameserver.default.json
gameserver/TemplateCollections/: MainCityObjectTemplateCollection.json
gameserver/src/: config.rs  logging.rs  main.rs
gameserver/src/config/: mod.rs  templates.rs
gameserver/src/data/: event_graph.rs  mod.rs  templates.rs  tsv_util.rs
gameserver/src/game/: context.rs  data.rs  globals.rs  mod.rs  util.rs
gameserver/src/game/manager/: dungeon.rs  hollow_grid.rs  item.rs  mod.rs  net_stream.rs  quest.rs  scene_unit.rs  unique_id.rs  unlock.rs  yorozuya_quest.rs
gameserver/src/net/: gateway.rs  mod.rs  packet.rs  session.rs
gameserver/src/net/handlers/: battle.rs  beginner_procedure.rs  hollow.rs  login.rs  mail.rs  mod.rs  plot_play.rs  progression.rs  role.rs  world.rs  yorozuya.rs
protocol/: Cargo.toml
protocol/src/: enums.rs  lib.rs  polymorphic.rs  protocol_id.rs  rpc_ptc.rs  structs.rs
qwer/: Cargo.toml
qwer/qwer-derive/: Cargo.toml
qwer/qwer-derive/src/: lib.rs  oct_data.rs
qwer/src/: collection.rs  fastoct.rs  lib.rs  protocol.rs
sdkserver/: Cargo.toml  versions.bundle
sdkserver/src/: crypto.rs  main.rs
sdkserver/src/data/: config.rs  entry.rs  mod.rs
sdkserver/src/services/: auth.rs  config.rs  entry.rs  errors.rs  mod.rs
