[workspace]
members = ["gameserver", "protocol", "qwer", "qwer/qwer-derive", "sdkserver"]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.81"
atomic_refcell = "0.1.13"
axum = "0.7.4"
axum-server = "0.6.0"
byteorder = "1.5.0"
dirs = "5.0.1"
dotenv = "0.15.0"
encoding = "0.2.33"
env_logger = "0.11.3"
heck = "0.5.0"
hex = "0.4.3"
lazy_static = "1.4.0"
leb128 = "0.2.5"
paste = "1.0.14"
sysinfo = "0.30.7"

serde = "1.0.197"
serde_json = "1.0.114"

tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["io"] }

tracing = "0.1.40"
tracing-futures = "0.2.5"
tracing-log = { version = "0.2.0", features = ["std", "log-tracer"] }
tracing-subscriber = { version = "0.3.18", features = [
	"env-filter",
	"registry",
	"std",
	"tracing",
	"tracing-log",
] }
tracing-bunyan-formatter = "0.3.9"

protocol = { version = "0.1.0", path = "protocol" }
qwer = { version = "0.1.0", path = "qwer", features = ["full"] }
qwer-derive = { version = "0.1.0", path = "qwer/qwer-derive" }

[profile.release]
strip = true      # Automatically strip symbols from the binary.
lto = true        # Link-time optimization.
opt-level = 3     # Optimize for speed.
codegen-units = 1 # Maximum size reduction optimizations.
