[package]
name = "sdkserver"
edition = "2021"
version.workspace = true

[dependencies]
axum.workspace = true
axum-server.workspace = true
encoding.workspace = true
leb128.workspace = true
anyhow.workspace = true
env_logger.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-util.workspace = true
ansi_term.workspace = true
rand.workspace = true

[[bin]]
name = "nap-sdkserver"
path = "src/main.rs"
